fix: overflowing help text in Numbers block sidebar (#367)

--- a/src/theme/_cms-ui.scss
+++ b/src/theme/_cms-ui.scss
@@ -268,6 +268,9 @@ body.cms-ui {
     }
   }
   .sidebar-container {
+    .numbers-block-sidebar-form-container {
+      padding-bottom: 1rem;
+    }
     .breadcrumbs {
       .breadcrumb {
         flex-wrap: wrap;
